# QA

./: .gitignore  CLAUDE.md  README.md  basic_data_bar_chart.py  data_table_display.py  export_large_df.py  longArtifactsMultiTabs.py  multiTabs.py  pyproject.toml  skills.txt  special_tab_names.py  table_block_diagnostics.py  time_series_line_chart.py  viz_parameter_render.py
.claude/agents/: ar-sdk-specialist.md  skill-design-specialist.md  skill-framework-specialist.md  visualization-specialist.md
builder_utils/: __init__.py  execute_sql.py  get_dataset_metadata.py  py_ex.py  run_skill.py  sync_repo.py  viz_previewer.py
builder_utils/scripts/: execute-sql  get-dataset-metadata  package-skill  run-all-tests  run-python  run-skill  sync-repo  test-visualization
builder_utils/tests/: README.md  run_all_tests.py  test_executor_integration.py  test_helper_utilities.py  test_packages_and_connections.py  test_skill_preview_example.py  test_visualization_framework.py
